--- a/core/js2uix-v1.0.1.css
+++ b/core/js2uix-v1.0.1.css
@@ -73,7 +73,7 @@ body.disableSelection * {  -webkit-user-select: none;  -moz-user-select: -moz-no
 .js2uix-grid .js2uix-grid-foot .js2uix-grid-page li.page span:last-child{ margin-right: 0; }
 .js2uix-grid .js2uix-grid-foot .js2uix-grid-page li.page input{ border: 1px solid #ddd; height: 20px; padding: 1px 10px; width: 50px; text-align: center;  font-size: 12px;}
 .js2uix-grid .js2uix-grid-load{ display: none; position: absolute; top:0; left:0; bottom: 0; right: 0; width: 100%; height: 100%; background-color: rgba(255, 255, 255, 0.8); z-index: 1; }
-.js2uix-grid .js2uix-grid-load .innerBox{ position: absolute; width: 180px; height: 30px; top:calc(50% - 15px);  left: calc(50% - 90px); border: 1px solid #ccc; background-color: #fff; border-radius: 2px; text-align: center; padding: 5px;  -webkit-box-shadow: 0 2px 3px -1px rgba(0,0,0,0.23);  -moz-box-shadow: 0 2px 3px -1px rgba(0,0,0,0.23);  box-shadow: 0 2px 3px -1px rgba(0,0,0,0.23);}
+.js2uix-grid .js2uix-grid-load .innerBox{ position: absolute; width: 200px; height: 30px; top:calc(50% - 15px);  left: calc(50% - 100px); border: 1px solid #ccc; background-color: #fff; border-radius: 2px; text-align: center; padding: 5px;  -webkit-box-shadow: 0 2px 3px -1px rgba(0,0,0,0.23);  -moz-box-shadow: 0 2px 3px -1px rgba(0,0,0,0.23);  box-shadow: 0 2px 3px -1px rgba(0,0,0,0.23);}
 .js2uix-grid ul.js2uix-body-row li button{ display: inline-block; height: 22px; border: 1px solid #ddd; border-radius: 2px; margin: 0 2px; font-size: 12px; background-color: #efefef; cursor: pointer; }
 /** availableMini mode */
 .js2uix-grid{ min-width: 330px !important; }
@@ -97,7 +97,7 @@ body.disableSelection * {  -webkit-user-select: none;  -moz-user-select: -moz-no
 .js2uix-combo.js2uix-search select{ z-index: 0;}
 .js2uix-combo.js2uix-search .js2uix-option{ position: absolute; display: none; left: 0; width: 100%; max-height: 105px; overflow: hidden; overflow-y: auto; border: 1px solid #ddd; z-index: 9; background-color: #fff; }
 .js2uix-combo.js2uix-search .js2uix-option ul{ display: block; width: 100%; height: auto; }
-.js2uix-combo.js2uix-search .js2uix-option li{ padding: 6px; font-size: 11px; border-bottom: 1px dotted #ddd; cursor: pointer; }
+.js2uix-combo.js2uix-search .js2uix-option li{ padding: 3px 6px; font-size: 11px; border-bottom: 1px dotted #ddd; cursor: pointer; }
 .js2uix-combo.js2uix-search .js2uix-option li:last-child{border-bottom:0;}
 .js2uix-combo.js2uix-search .js2uix-option li:hover,
 .js2uix-combo.js2uix-search .js2uix-option li.on{ background-color: rgba(0, 175, 255, 0.1); }
