js2uix - develop

--- a/core/js2uix-v1.0.1.css
+++ b/core/js2uix-v1.0.1.css
@@ -8,6 +8,7 @@
  * Copyright   : js2uix - JH.Yu
  * FullSource  : https://github.com/js2uix/js2uix
  * License     : https://github.com/js2uix/js2uix/blob/master/LICENSE
+ * build       : gulp.js
  */
 body.disableSelection * {  -webkit-user-select: none;  -moz-user-select: -moz-none;  -o-user-select: none;  user-select: none; }
 .js2uix-grid{ position: relative; display: block; width: 100%; min-width: 330px; height: 100%; font-size: 13px; border: 1px solid #ddd; overflow: hidden; -webkit-box-sizing: border-box;  -moz-box-sizing: border-box;  box-sizing: border-box; }
